--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,14 @@ hr {
     margin-bottom: 5%;
 }
 
+
+/* div.css-18uc3a4 p {
+    word-break: break-word;
+    color: aqua;
+} */
+
+
 #MainMenu {visibility: hidden;}
 footer {visibility: hidden;}
 header {visibility: hidden;}
+
