make it better 6

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,11 +23,9 @@ hr {
 }
 
 
-/* div.css-18uc3a4 p {
-    word-break: break-word;
-    color: aqua;
-} */
-
+.e16nr0p30 {
+    color: beige;
+ }
 
 #MainMenu {visibility: hidden;}
 footer {visibility: hidden;}
